# DevOps-Trouble-Map

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
agent/: Makefile.am  dotm_node.c  dotm_node.rc.in
aggregator/: dotm_state_fetcher  fetch_agent  fetch_ssh
backend/: Makefile.am  README  dotm_api.py  dotm_api.rc.in  dotm_backend.py  dotm_common.py  dotm_monitor.py  dotm_namespace.py  dotm_queue.py  dotm_settings.py  redis_copy.lua  requirements.txt  settings.py
backend/dotm_monitor/: dotm_mon.py
doc/: dotm-architecture.xml  dotm-er.xml
dotm-aggregator/: cron_dotm_aggregator  state_fetcher
dotm-backend/: Makefile.am  backend.py  requirements.txt
dotm-frontend/static/: index.htm  jquery.timeago.js
dotm-frontend/static/css/: default.css
dotm-monitor/: README  mon_api.py  mon_collector.py  requirements.txt
dotm-monitor/dotm_mon/: dotm_mon.py
dotm-monitor/dotm_redis/: __init__.py  dotm_redis.py
dotm-node/: Makefile.am  README  configure.ac  dotm-node.c
dotm_aggregator/: Makefile.am  cron_dotm_aggregator  dotm_state_fetcher
dotm_backend/: Makefile.am  README  dotm_backend.py  dotm_backend.rc.in
dotm_backend/dotm_monitor/: dotm_mon.py
dotm_frontend/: Makefile.am  README.md  apache-2.4.conf  apache-2.4.conf.in
dotm_frontend/static/: dotm_view_all_nodes.js  dotm_view_config.js  dotm_view_node.js  index.htm  jquery.timeago.js
dotm_frontend/static/css/: default.css
dotm_monitor/: README  mon_api.py  requirements.txt
dotm_monitor/dotm_mon/: __init__.py  dotm_mon.py
dotm_node/: configure.ac  dotm_node.rc.in
frontend/: Makefile.am  README.md  apache-2.2.conf.in  apache-2.4.conf.in
frontend/static/: dotm_common.js  dotm_view_all_nodes.js  dotm_view_all_services.js  dotm_view_config.js  dotm_view_gmap.js  dotm_view_history.js  dotm_view_manage_nodes.js  dotm_view_node.js  dotm_view_report.js  index.htm
frontend/static/css/: default.css
scripts/: Makefile.am  dotm_api  dotm_python_wrapper.in  install-agent.sh  install-server.sh
