dotm_frontend_staticdir = $(datadir)/dotm_frontend/static
dotm_frontend_static_DATA = \
	static/index.htm \
	static/arrow-right.svg \
	static/arrow-right-dashed.svg \
	static/jquery-2.1.1.min.js \
	static/jquery-migrate-1.0.0.js \
	static/jquery-ui.min.js \
	static/jquery.layout.min-1.2.0.js \
	static/jquery.timeago.js \
	static/gmap3.min.js \
	static/d3.v3.js \
	static/cola.v3.min.js \
	static/dotm_common.js \
	static/dotm_view_node.js \
	static/dotm_view_all_nodes.js \
	static/dotm_view_gmap.js \
	static/dotm_view_config.js

dotm_frontend_cssdir = $(datadir)/dotm_frontend/static/css
dotm_frontend_css_DATA = \
	static/css/default.css \
	static/css/layout-default.css

dotm_frontenddir = $(datadir)/dotm_frontend
dotm_frontend_DATA = apache-2.4.conf
